--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "glob": "^7.1.2",
     "kafkajs": ">= 1.3.1 < 2.0.0",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "yargs": "^12.0.1"
   },
   "devDependencies": {
     "jest": "^23.5.0"
