--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:local": "rm -f ./src/availableApis.json && NODE_ENV=test ./node_modules/.bin/jest src/ --forceExit --detectOpenHandles",
     "test:local:watch": "yarn test:local --watch",
     "test": "yarn test:local --ci --maxWorkers=4 --no-watchman",
-    "test:binary": "NODE_ENV=test ./node_modules/.bin/jest pkgTests/",
+    "test:binary": "./bin/warmUpTestBinary.js &> /dev/null && NODE_ENV=test ./node_modules/.bin/jest pkgTests/ --forceExit --detectOpenHandles",
     "test:binary:ci": "rm -rf ./dist/ && yarn package && yarn test:binary",
     "package": "./bin/scanAvailableApis.js && ./node_modules/.bin/pkg --out-path ./dist/ package.json"
   },
